build/antlr4cpp_generated_src/HexaC/HexaCParser.cpp

// Generated from /Users/tbourvon/Drive/Projects/Programming/HexaC/grammar/HexaCParser.g4 by ANTLR 4.7.1


#include "HexaCParserListener.h"
#include "HexaCParserVisitor.h"

#include "HexaCParser.h"


using namespace antlrcpp;
using namespace HexaC;
using namespace antlr4;

HexaCParser::HexaCParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

HexaCParser::~HexaCParser() {
  delete _interpreter;
}

std::string HexaCParser::getGrammarFileName() const {
  return "HexaCParser.g4";
}

const std::vector<std::string>& HexaCParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& HexaCParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

HexaCParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<HexaCParser::Toplevel_itemContext *> HexaCParser::ProgramContext::toplevel_item() {
  return getRuleContexts<HexaCParser::Toplevel_itemContext>();
}

HexaCParser::Toplevel_itemContext* HexaCParser::ProgramContext::toplevel_item(size_t i) {
  return getRuleContext<HexaCParser::Toplevel_itemContext>(i);
}


size_t HexaCParser::ProgramContext::getRuleIndex() const {
  return HexaCParser::RuleProgram;
}

void HexaCParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HexaCParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void HexaCParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HexaCParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


antlrcpp::Any HexaCParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HexaCParserVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

HexaCParser::ProgramContext* HexaCParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, HexaCParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(45);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << HexaCParser::INT32_T)
      | (1ULL << HexaCParser::INT64_T)
      | (1ULL << HexaCParser::CHAR)
      | (1ULL << HexaCParser::VOID)
      | (1ULL << HexaCParser::HASH))) != 0)) {
      setState(42);
      toplevel_item();
      setState(47);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Toplevel_itemContext ------------------------------------------------------------------

HexaCParser::Toplevel_itemContext::Toplevel_itemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HexaCParser::Preproc_dirContext* HexaCParser::Toplevel_itemContext::preproc_dir() {
  return getRuleContext<HexaCParser::Preproc_dirContext>(0);
}

HexaCParser::DeclContext* HexaCParser::Toplevel_itemContext::decl() {
  return getRuleContext<HexaCParser::DeclContext>(0);
}


size_t HexaCParser::Toplevel_itemContext::getRuleIndex() const {
  return HexaCParser::RuleToplevel_item;
}

void HexaCParser::Toplevel_itemContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HexaCParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterToplevel_item(this);
}

void HexaCParser::Toplevel_itemContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HexaCParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitToplevel_item(this);
}


antlrcpp::Any HexaCParser::Toplevel_itemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HexaCParserVisitor*>(visitor))
    return parserVisitor->visitToplevel_item(this);
  else
    return visitor->visitChildren(this);
}

HexaCParser::Toplevel_itemContext* HexaCParser::toplevel_item() {
  Toplevel_itemContext *_localctx = _tracker.createInstance<Toplevel_itemContext>(_ctx, getState());
  enterRule(_localctx, 2, HexaCParser::RuleToplevel_item);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(50);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case HexaCParser::HASH: {
        enterOuterAlt(_localctx, 1);
        setState(48);
        preproc_dir();
        break;
      }

      case HexaCParser::INT32_T:
      case HexaCParser::INT64_T:
      case HexaCParser::CHAR:
      case HexaCParser::VOID: {
        enterOuterAlt(_localctx, 2);
        setState(49);
        decl();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Preproc_dirContext ------------------------------------------------------------------

HexaCParser::Preproc_dirContext::Preproc_dirContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HexaCParser::Preproc_dirContext::HASH() {
  return getToken(HexaCParser::HASH, 0);
}

tree::TerminalNode* HexaCParser::Preproc_dirContext::INCLUDE() {
  return getToken(HexaCParser::INCLUDE, 0);
}

tree::TerminalNode* HexaCParser::Preproc_dirContext::LT() {
  return getToken(HexaCParser::LT, 0);
}

std::vector<tree::TerminalNode *> HexaCParser::Preproc_dirContext::ID() {
  return getTokens(HexaCParser::ID);
}

tree::TerminalNode* HexaCParser::Preproc_dirContext::ID(size_t i) {
  return getToken(HexaCParser::ID, i);
}

tree::TerminalNode* HexaCParser::Preproc_dirContext::DOT() {
  return getToken(HexaCParser::DOT, 0);
}

tree::TerminalNode* HexaCParser::Preproc_dirContext::GT() {
  return getToken(HexaCParser::GT, 0);
}


size_t HexaCParser::Preproc_dirContext::getRuleIndex() const {
  return HexaCParser::RulePreproc_dir;
}

void HexaCParser::Preproc_dirContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HexaCParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPreproc_dir(this);
}

void HexaCParser::Preproc_dirContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HexaCParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPreproc_dir(this);
}


antlrcpp::Any HexaCParser::Preproc_dirContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HexaCParserVisitor*>(visitor))
    return parserVisitor->visitPreproc_dir(this);
  else
    return visitor->visitChildren(this);
}

HexaCParser::Preproc_dirContext* HexaCParser::preproc_dir() {
  Preproc_dirContext *_localctx = _tracker.createInstance<Preproc_dirContext>(_ctx, getState());
  enterRule(_localctx, 4, HexaCParser::RulePreproc_dir);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(52);
    match(HexaCParser::HASH);
    setState(53);
    match(HexaCParser::INCLUDE);
    setState(54);
    match(HexaCParser::LT);
    setState(55);
    match(HexaCParser::ID);
    setState(56);
    match(HexaCParser::DOT);
    setState(57);
    match(HexaCParser::ID);
    setState(58);
    match(HexaCParser::GT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclContext ------------------------------------------------------------------

HexaCParser::DeclContext::DeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HexaCParser::Func_declContext* HexaCParser::DeclContext::func_decl() {
  return getRuleContext<HexaCParser::Func_declContext>(0);
}

HexaCParser::Var_declContext* HexaCParser::DeclContext::var_decl() {
  return getRuleContext<HexaCParser::Var_declContext>(0);
}


size_t HexaCParser::DeclContext::getRuleIndex() const {
  return HexaCParser::RuleDecl;
}

void HexaCParser::DeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HexaCParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDecl(this);
}

void HexaCParser::DeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HexaCParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDecl(this);
}


antlrcpp::Any HexaCParser::DeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HexaCParserVisitor*>(visitor))
    return parserVisitor->visitDecl(this);
  else
    return visitor->visitChildren(this);
}

HexaCParser::DeclContext* HexaCParser::decl() {
  DeclContext *_localctx = _tracker.createInstance<DeclContext>(_ctx, getState());
  enterRule(_localctx, 6, HexaCParser::RuleDecl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(62);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(60);
      func_decl();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(61);
      var_decl();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Func_declContext ------------------------------------------------------------------

HexaCParser::Func_declContext::Func_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HexaCParser::TypeContext* HexaCParser::Func_declContext::type() {
  return getRuleContext<HexaCParser::TypeContext>(0);
}

tree::TerminalNode* HexaCParser::Func_declContext::ID() {
  return getToken(HexaCParser::ID, 0);
}

tree::TerminalNode* HexaCParser::Func_declContext::OPEN_PAR() {
  return getToken(HexaCParser::OPEN_PAR, 0);
}

HexaCParser::Param_listContext* HexaCParser::Func_declContext::param_list() {
  return getRuleContext<HexaCParser::Param_listContext>(0);
}

tree::TerminalNode* HexaCParser::Func_declContext::CLOSE_PAR() {
  return getToken(HexaCParser::CLOSE_PAR, 0);
}

HexaCParser::BlockContext* HexaCParser::Func_declContext::block() {
  return getRuleContext<HexaCParser::BlockContext>(0);
}


size_t HexaCParser::Func_declContext::getRuleIndex() const {
  return HexaCParser::RuleFunc_decl;
}

void HexaCParser::Func_declContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HexaCParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunc_decl(this);
}

void HexaCParser::Func_declContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HexaCParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunc_decl(this);
}


antlrcpp::Any HexaCParser::Func_declContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HexaCParserVisitor*>(visitor))
    return parserVisitor->visitFunc_decl(this);
  else
    return visitor->visitChildren(this);
}

HexaCParser::Func_declContext* HexaCParser::func_decl() {
  Func_declContext *_localctx = _tracker.createInstance<Func_declContext>(_ctx, getState());
  enterRule(_localctx, 8, HexaCParser::RuleFunc_decl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(64);
    type();
    setState(65);
    match(HexaCParser::ID);
    setState(66);
    match(HexaCParser::OPEN_PAR);
    setState(67);
    param_list();
    setState(68);
    match(HexaCParser::CLOSE_PAR);
    setState(69);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

HexaCParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HexaCParser::TypeContext::INT32_T() {
  return getToken(HexaCParser::INT32_T, 0);
}

tree::TerminalNode* HexaCParser::TypeContext::INT64_T() {
  return getToken(HexaCParser::INT64_T, 0);
}

tree::TerminalNode* HexaCParser::TypeContext::CHAR() {
  return getToken(HexaCParser::CHAR, 0);
}

tree::TerminalNode* HexaCParser::TypeContext::VOID() {
  return getToken(HexaCParser::VOID, 0);
}


size_t HexaCParser::TypeContext::getRuleIndex() const {
  return HexaCParser::RuleType;
}

void HexaCParser::TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HexaCParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType(this);
}

void HexaCParser::TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HexaCParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType(this);
}


antlrcpp::Any HexaCParser::TypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HexaCParserVisitor*>(visitor))
    return parserVisitor->visitType(this);
  else
    return visitor->visitChildren(this);
}

HexaCParser::TypeContext* HexaCParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 10, HexaCParser::RuleType);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << HexaCParser::INT32_T)
      | (1ULL << HexaCParser::INT64_T)
      | (1ULL << HexaCParser::CHAR)
      | (1ULL << HexaCParser::VOID))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Param_listContext ------------------------------------------------------------------

HexaCParser::Param_listContext::Param_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<HexaCParser::ParamContext *> HexaCParser::Param_listContext::param() {
  return getRuleContexts<HexaCParser::ParamContext>();
}

HexaCParser::ParamContext* HexaCParser::Param_listContext::param(size_t i) {
  return getRuleContext<HexaCParser::ParamContext>(i);
}

std::vector<tree::TerminalNode *> HexaCParser::Param_listContext::COMMA() {
  return getTokens(HexaCParser::COMMA);
}

tree::TerminalNode* HexaCParser::Param_listContext::COMMA(size_t i) {
  return getToken(HexaCParser::COMMA, i);
}


size_t HexaCParser::Param_listContext::getRuleIndex() const {
  return HexaCParser::RuleParam_list;
}

void HexaCParser::Param_listContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HexaCParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParam_list(this);
}

void HexaCParser::Param_listContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HexaCParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParam_list(this);
}


antlrcpp::Any HexaCParser::Param_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HexaCParserVisitor*>(visitor))
    return parserVisitor->visitParam_list(this);
  else
    return visitor->visitChildren(this);
}

HexaCParser::Param_listContext* HexaCParser::param_list() {
  Param_listContext *_localctx = _tracker.createInstance<Param_listContext>(_ctx, getState());
  enterRule(_localctx, 12, HexaCParser::RuleParam_list);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(82);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case HexaCParser::INT32_T:
      case HexaCParser::INT64_T:
      case HexaCParser::CHAR:
      case HexaCParser::VOID: {
        enterOuterAlt(_localctx, 1);
        setState(73);
        param();
        setState(78);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == HexaCParser::COMMA) {
          setState(74);
          match(HexaCParser::COMMA);
          setState(75);
          param();
          setState(80);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        break;
      }

      case HexaCParser::CLOSE_PAR: {
        enterOuterAlt(_localctx, 2);

        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamContext ------------------------------------------------------------------

HexaCParser::ParamContext::ParamContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HexaCParser::TypeContext* HexaCParser::ParamContext::type() {
  return getRuleContext<HexaCParser::TypeContext>(0);
}

tree::TerminalNode* HexaCParser::ParamContext::ID() {
  return getToken(HexaCParser::ID, 0);
}


size_t HexaCParser::ParamContext::getRuleIndex() const {
  return HexaCParser::RuleParam;
}

void HexaCParser::ParamContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HexaCParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParam(this);
}

void HexaCParser::ParamContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HexaCParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParam(this);
}


antlrcpp::Any HexaCParser::ParamContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HexaCParserVisitor*>(visitor))
    return parserVisitor->visitParam(this);
  else
    return visitor->visitChildren(this);
}

HexaCParser::ParamContext* HexaCParser::param() {
  ParamContext *_localctx = _tracker.createInstance<ParamContext>(_ctx, getState());
  enterRule(_localctx, 14, HexaCParser::RuleParam);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(84);
    type();
    setState(85);
    match(HexaCParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

HexaCParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* HexaCParser::BlockContext::OPEN_BRACE() {
  return getToken(HexaCParser::OPEN_BRACE, 0);
}

HexaCParser::Stmt_listContext* HexaCParser::BlockContext::stmt_list() {
  return getRuleContext<HexaCParser::Stmt_listContext>(0);
}

tree::TerminalNode* HexaCParser::BlockContext::CLOSE_BRACE() {
  return getToken(HexaCParser::CLOSE_BRACE, 0);
}


size_t HexaCParser::BlockContext::getRuleIndex() const {
  return HexaCParser::RuleBlock;
}

void HexaCParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HexaCParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void HexaCParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HexaCParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}


antlrcpp::Any HexaCParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HexaCParserVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

HexaCParser::BlockContext* HexaCParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 16, HexaCParser::RuleBlock);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    match(HexaCParser::OPEN_BRACE);
    setState(88);
    stmt_list();
    setState(89);
    match(HexaCParser::CLOSE_BRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Stmt_listContext ------------------------------------------------------------------

HexaCParser::Stmt_listContext::Stmt_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<HexaCParser::StmtContext *> HexaCParser::Stmt_listContext::stmt() {
  return getRuleContexts<HexaCParser::StmtContext>();
}

HexaCParser::StmtContext* HexaCParser::Stmt_listContext::stmt(size_t i) {
  return getRuleContext<HexaCParser::StmtContext>(i);
}


size_t HexaCParser::Stmt_listContext::getRuleIndex() const {
  return HexaCParser::RuleStmt_list;
}

void HexaCParser::Stmt_listContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HexaCParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmt_list(this);
}

void HexaCParser::Stmt_listContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HexaCParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmt_list(this);
}


antlrcpp::Any HexaCParser::Stmt_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HexaCParserVisitor*>(visitor))
    return parserVisitor->visitStmt_list(this);
  else
    return visitor->visitChildren(this);
}

HexaCParser::Stmt_listContext* HexaCParser::stmt_list() {
  Stmt_listContext *_localctx = _tracker.createInstance<Stmt_listContext>(_ctx, getState());
  enterRule(_localctx, 18, HexaCParser::RuleStmt_list);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << HexaCParser::ID)
      | (1ULL << HexaCParser::IF)
      | (1ULL << HexaCParser::WHILE)
      | (1ULL << HexaCParser::INT32_T)
      | (1ULL << HexaCParser::INT64_T)
      | (1ULL << HexaCParser::CHAR)
      | (1ULL << HexaCParser::VOID)
      | (1ULL << HexaCParser::INT_LIT)
      | (1ULL << HexaCParser::CHAR_LIT)
      | (1ULL << HexaCParser::OPEN_PAR)
      | (1ULL << HexaCParser::OPEN_BRACE)
      | (1ULL << HexaCParser::PLUS)
      | (1ULL << HexaCParser::MINUS)
      | (1ULL << HexaCParser::NOT)
      | (1ULL << HexaCParser::PLUS_PLUS)
      | (1ULL << HexaCParser::MINUS_MINUS))) != 0)) {
      setState(91);
      stmt();
      setState(96);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

HexaCParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HexaCParser::Var_declContext* HexaCParser::StmtContext::var_decl() {
  return getRuleContext<HexaCParser::Var_declContext>(0);
}

HexaCParser::Expr_stmtContext* HexaCParser::StmtContext::expr_stmt() {
  return getRuleContext<HexaCParser::Expr_stmtContext>(0);
}

HexaCParser::If_stmtContext* HexaCParser::StmtContext::if_stmt() {
  return getRuleContext<HexaCParser::If_stmtContext>(0);
}

HexaCParser::While_stmtContext* HexaCParser::StmtContext::while_stmt() {
  return getRuleContext<HexaCParser::While_stmtContext>(0);
}

HexaCParser::BlockContext* HexaCParser::StmtContext::block() {
  return getRuleContext<HexaCParser::BlockContext>(0);
}


size_t HexaCParser::StmtContext::getRuleIndex() const {
  return HexaCParser::RuleStmt;
}

void HexaCParser::StmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HexaCParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmt(this);
}

void HexaCParser::StmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HexaCParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmt(this);
}


antlrcpp::Any HexaCParser::StmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HexaCParserVisitor*>(visitor))
    return parserVisitor->visitStmt(this);
  else
    return visitor->visitChildren(this);
}

HexaCParser::StmtContext* HexaCParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 20, HexaCParser::RuleStmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(102);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case HexaCParser::INT32_T:
      case HexaCParser::INT64_T:
      case HexaCParser::CHAR:
      case HexaCParser::VOID: {
        enterOuterAlt(_localctx, 1);
        setState(97);
        var_decl();
        break;
      }

      case HexaCParser::ID:
      case HexaCParser::INT_LIT:
      case HexaCParser::CHAR_LIT:
      case HexaCParser::OPEN_PAR:
      case HexaCParser::PLUS:
      case HexaCParser::MINUS:
      case HexaCParser::NOT:
      case HexaCParser::PLUS_PLUS:
      case HexaCParser::MINUS_MINUS: {
        enterOuterAlt(_localctx, 2);
        setState(98);
        expr_stmt();
        break;
      }

      case HexaCParser::IF: {
        enterOuterAlt(_localctx, 3);
        setState(99);
        if_stmt();
        break;
      }

      case HexaCParser::WHILE: {
        enterOuterAlt(_localctx, 4);
        setState(100);
        while_stmt();
        break;
      }

      case HexaCParser::OPEN_BRACE: {
        enterOuterAlt(_localctx, 5);
        setState(101);
        block();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_declContext ------------------------------------------------------------------

HexaCParser::Var_declContext::Var_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

HexaCParser::TypeContext* HexaCParser::Var_declContext::type() {
  return getRuleContext<HexaCParser::TypeContext>(0);
}

tree::TerminalNode* HexaCParser::Var_declContext::ID() {
  return getToken(HexaCParser::ID, 0);
}

tree::TerminalNode* HexaCParser::Var_declContext::SEMICOLON() {
  return getToken(HexaCParser::SEMICOLON, 0);
}


size_t HexaCParser::Var_declContext::getRuleIndex() const {
  return HexaCParser::RuleVar_decl;
}

void HexaCParser::Var_declContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HexaCParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVar_decl(this);
}

void HexaCParser::Var_declContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<HexaCParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVar_decl(this);
}


antlrcpp::Any HexaCParser::Var_declContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<HexaCParserVisitor*>(visitor))
    return parserVisitor->visitVar_decl(this);
  else
    return visitor->visitChildren(this);
}

HexaCParser::Var_declContext* HexaCParser::var_decl() {
  Var_declContext *_localctx = _tracker.createInstance<Var_declContext>(_ctx, getState());
  enterRule(_localctx, 22, HexaCParser::RuleVar_decl);
